@@ -1,5 +1,12 @@
 2007-01-22  Benoît Dejean  <benoit@placenet.org>
 
+	* src/proctable.cpp:
+
+	Re-added the GNOME logo.
+	Patch by Luca Cavalli  <luca.cavalli@gmail.com>
+
+2007-01-22  Benoît Dejean  <benoit@placenet.org>
+
 	* src/interface.cpp:
 	
 	Little cleanup.
